crates/carta/tests/snapshots/odt__corpus__math__aligned.snap
---
source: crates/carta/tests/odt.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<office:document-content xmlns:office="urn:oasis:names:tc:opendocument:xmlns:office:1.0" xmlns:style="urn:oasis:names:tc:opendocument:xmlns:style:1.0" xmlns:text="urn:oasis:names:tc:opendocument:xmlns:text:1.0" xmlns:table="urn:oasis:names:tc:opendocument:xmlns:table:1.0" xmlns:draw="urn:oasis:names:tc:opendocument:xmlns:drawing:1.0" xmlns:fo="urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:meta="urn:oasis:names:tc:opendocument:xmlns:meta:1.0" xmlns:number="urn:oasis:names:tc:opendocument:xmlns:datastyle:1.0" xmlns:svg="urn:oasis:names:tc:opendocument:xmlns:svg-compatible:1.0" xmlns:math="http://www.w3.org/1998/Math/MathML" office:version="1.3">
<office:scripts />
<office:font-face-decls>
<style:font-face style:name="Courier New" style:font-family-generic="modern" style:font-pitch="fixed" svg:font-family="'Courier New'" />
</office:font-face-decls>
<office:automatic-styles>
<style:style style:name="fr1" style:family="graphic" style:parent-style-name="Formula">
<style:graphic-properties style:vertical-pos="middle" style:vertical-rel="text" />
</style:style>
<style:style style:name="fr2" style:family="graphic" style:parent-style-name="Formula">
<style:graphic-properties style:vertical-pos="middle" style:vertical-rel="text" style:horizontal-pos="center" style:horizontal-rel="paragraph-content" style:wrap="none" />
</style:style>
</office:automatic-styles>
<office:body>
<office:text>
<text:p text:style-name="Text_20_body">
<draw:frame draw:style-name="fr2" text:anchor-type="paragraph">
<draw:object xlink:href="Formula-0/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame>
</text:p>
<text:p text:style-name="Text_20_body">
<draw:frame draw:style-name="fr2" text:anchor-type="paragraph">
<draw:object xlink:href="Formula-2/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame>
</text:p>
<text:p text:style-name="Text_20_body">stack <draw:frame draw:style-name="fr1" text:anchor-type="as-char">
<draw:object xlink:href="Formula-4/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame>
</text:p>
</office:text>
</office:body>
</office:document-content>
<!-- Formula-0/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
<mtable>
<mtr>
<mtd columnalign="right" style="text-align: right">
<msup>
<mi>x</mi>
<mn>2</mn>
</msup>
<mo>+</mo>
<mn>1</mn>
</mtd>
</mtr>
<mtr>
<mtd columnalign="right" style="text-align: right">
<mfrac>
<mi>a</mi>
<mi>b</mi>
</mfrac>
</mtd>
</mtr>
</mtable>
</math>
<!-- Formula-2/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
<mtable>
<mtr>
<mtd columnalign="right" style="text-align: right; padding-right: 0">
<mi>a</mi>
</mtd>
<mtd columnalign="left" style="text-align: left; padding-left: 0">
<mo>=</mo>
<mi>b</mi>
<mo>+</mo>
<mi>c</mi>
</mtd>
</mtr>
<mtr>
<mtd columnalign="right" style="text-align: right; padding-right: 0">
<mi>d</mi>
</mtd>
<mtd columnalign="left" style="text-align: left; padding-left: 0">
<mo>=</mo>
<mi>e</mi>
</mtd>
</mtr>
</mtable>
</math>
<!-- Formula-4/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
<mtable>
<mtr>
<mtd columnalign="right" style="text-align: right">
<mi>p</mi>
</mtd>
</mtr>
<mtr>
<mtd columnalign="right" style="text-align: right">
<mi>q</mi>
</mtd>
</mtr>
<mtr>
<mtd columnalign="right" style="text-align: right">
<mi>r</mi>
</mtd>
</mtr>
</mtable>
</math>
