crates/carta/tests/snapshots/odt__corpus__math__braces.snap
---
source: crates/carta/tests/odt.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<office:document-content xmlns:office="urn:oasis:names:tc:opendocument:xmlns:office:1.0" xmlns:style="urn:oasis:names:tc:opendocument:xmlns:style:1.0" xmlns:text="urn:oasis:names:tc:opendocument:xmlns:text:1.0" xmlns:table="urn:oasis:names:tc:opendocument:xmlns:table:1.0" xmlns:draw="urn:oasis:names:tc:opendocument:xmlns:drawing:1.0" xmlns:fo="urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:meta="urn:oasis:names:tc:opendocument:xmlns:meta:1.0" xmlns:number="urn:oasis:names:tc:opendocument:xmlns:datastyle:1.0" xmlns:svg="urn:oasis:names:tc:opendocument:xmlns:svg-compatible:1.0" xmlns:math="http://www.w3.org/1998/Math/MathML" office:version="1.3">
<office:scripts />
<office:font-face-decls>
<style:font-face style:name="Courier New" style:font-family-generic="modern" style:font-pitch="fixed" svg:font-family="'Courier New'" />
</office:font-face-decls>
<office:automatic-styles>
<style:style style:name="fr1" style:family="graphic" style:parent-style-name="Formula">
<style:graphic-properties style:vertical-pos="middle" style:vertical-rel="text" />
</style:style>
<style:style style:name="fr2" style:family="graphic" style:parent-style-name="Formula">
<style:graphic-properties style:vertical-pos="middle" style:vertical-rel="text" style:horizontal-pos="center" style:horizontal-rel="paragraph-content" style:wrap="none" />
</style:style>
</office:automatic-styles>
<office:body>
<office:text>
<text:p text:style-name="Text_20_body">
<draw:frame draw:style-name="fr1" text:anchor-type="as-char">
<draw:object xlink:href="Formula-0/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame> <draw:frame draw:style-name="fr1" text:anchor-type="as-char">
<draw:object xlink:href="Formula-2/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame> <draw:frame draw:style-name="fr1" text:anchor-type="as-char">
<draw:object xlink:href="Formula-4/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame> <draw:frame draw:style-name="fr1" text:anchor-type="as-char">
<draw:object xlink:href="Formula-6/" xlink:type="simple" xlink:show="embed" xlink:actuate="onLoad" />
</draw:frame>
</text:p>
</office:text>
</office:body>
</office:document-content>
<!-- Formula-0/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
<mover>
<mrow>
<mi>a</mi>
<mo>+</mo>
<mi>b</mi>
</mrow>
<mo accent="true">⏞</mo>
</mover>
</math>
<!-- Formula-2/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
<munder>
<mrow>
<mi>x</mi>
<mo>+</mo>
<mi>y</mi>
<mo>+</mo>
<mi>z</mi>
</mrow>
<mo accent="true">⏟</mo>
</munder>
</math>
<!-- Formula-4/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
<mover>
<mover>
<mrow>
<mi>a</mi>
<mo>+</mo>
<mi>b</mi>
</mrow>
<mo accent="true">⏞</mo>
</mover>
<mi>n</mi>
</mover>
</math>
<!-- Formula-6/content.xml -->
<?xml version="1.0" encoding="UTF-8"?>
<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline">
<munder>
<munder>
<mrow>
<mi>x</mi>
<mo>+</mo>
<mi>y</mi>
</mrow>
<mo accent="true">⏟</mo>
</munder>
<mi>k</mi>
</munder>
</math>
